--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: A podcast about our family of four where we discuss parenting, life
 author: Levi and Amy
 email: levi.j.elston@gmail.com
 lang: en-us
-copyright: "&#x2117; &amp; &#xA9; 2020"
+copyright: "&#xA9; 2019"
 logo: /assets/img/WeUsedToBeFun_logo.png
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
