--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ lang: en-us
 copyright: "&#xA9; 2019"
 logo: /assets/img/WeUsedToBeFun_logo.png
 rss_feed: /podcast.rss
+twitter_url: https://www.twitter.com/weusedtobefun
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
